--- a/index.html
+++ b/index.html
@@ -7,81 +7,81 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-    <title>Em busca da cidade perdida</title>
+    <title>As viagens de ygonah veyers</title>
 </head>
 <body>
     <main>
         <div class="passo ativo" id="passo-0">
             <img src="img/cenario-passo0.png" alt="">
-            <p>Um dia desses, dentro de um livro da biblioteca da escola, eu descobri uma carta antiga sobre uma cidade perdida, escondida por riquezas e belezas naturais. Nessa carta, a autora deixa algumas pistas para encontrar essa cidade e eu decidi segui-las!</p>
-            <button class="btn-proximo" data-proximo="1">Rio de Janeiro</button>
-            <button class="btn-proximo" data-proximo="2">Pernambuco</button>
+            <p>Um dia desses veyers, a dyvah ygonah foi capturada pela rayane meor e a gente precisa salvar ela da mary cururus👄</p>
+            <button class="btn-proximo" data-proximo="1">Floptopcialia</button>
+            <button class="btn-proximo" data-proximo="2">Indo Ali</button>
         </div>
         <div class="passo" id="passo-1">
-            <p>Você começa sua jornada no Rio de Janeiro, subindo o Pico da Tijuca ao amanhecer para encontrar a primeira pista.</p>
-            <button class="btn-proximo" data-proximo="3">Procurar a pista no topo do pico</button>
-            <button class="btn-proximo" data-proximo="4">Desistir e voltar para casa</button>
+            <p>Você começa sua jornada no barracao da lorah veyers, doidaaaahhwn pra ver.</p>
+            <button class="btn-proximo" data-proximo="3">Procurar pela dica da lorah</button>
+            <button class="btn-proximo" data-proximo="4">Desistir meor// arregar fio</button>
         </div>
         <div class="passo" id="passo-2">
-            <p>Em Pernambuco, você visita a histórica cidade de Olinda. Na carta, uma das pistas indica que para localizar a entrada para a cidade perdida você deve procurar a próxima pista em um dos pontos turísticos da cidade. Por qual você começa?</p>
-            <button class="btn-proximo" data-proximo="5">Investigar as igrejas antigas</button>
-            <button class="btn-proximo" data-proximo="6">Explorar as praias próximas</button>
+            <p>No bar da lorah, você visita a histórica cidade de PeachesAss. Seguinte fiorr, a lorah te deu um diquita que para localizar a ygonahh vc precisa achar a phonsy. Mas ode a mamis phonsy estaria veyrrs?</p>
+            <button class="btn-proximo" data-proximo="5">Investigar o baile da aphonsy</button>
+            <button class="btn-proximo" data-proximo="6">Explorar o buero da newfmx</button>
         </div>
         <div class="passo" id="passo-3">
-            <p>No topo do Pico da Tijuca, você encontra uma antiga inscrição apontando que a próxima pista está
-                localizada no Amazonas.</p>
+            <p>No topo da chuvahh de deek da ygonah, voce localiza um fio da transa delarrrhh,
+                localizada naquele barracaoryer.</p>
             <button class="btn-proximo" data-proximo="7">Seguir para o Amazonas</button>
         </div>
 
         <div class="passo" id="passo-4">
             <img src="img/cenario-passo4-voltar-casa.png" alt="imagem voltando para casa e desitindo da aventura">
-            <p>Você decide que a aventura é grande demais e volta para casa, mas sempre se pergunta o que teria
-                encontrado.</p>
+            <p>Voce nao aturou e arregou ner fio// a mamae nao deu o close dela.
+                cagao affs</p>
         </div>
 
         <div class="passo" id="passo-5">
-            <p>Nas igrejas de Olinda, você descobre um mapa antigo escondido atrás de um altar, apontando que a próxima
-                pista está no Amazonas.</p>
-            <button class="btn-proximo" data-proximo="7">Viajar para o Amazonas</button>
+            <p>No barracao escondidorr atras do baile da phonsyr vc acha outra dica do the frog agr veyers,
+                pista está no kitcop.</p>
+            <button class="btn-proximo" data-proximo="7">Viajar para dimensao da jabiraca</button>
         </div>
 
         <div class="passo" id="passo-6">
-            <p>Explorando as praias, você encontra uma caverna escondida, mas ela leva a um beco sem saída.</p>
-            <button class="btn-proximo" data-proximo="8">Voltar e explorar as igrejas</button>
+            <p>Explorando a dimensao da jabiracarrr veyers você encontra uma caverna escondida com escravidao 👁️👄👁️ mas ela leva a um becor de biqueirah</p>
+            <button class="btn-proximo" data-proximo="8">Voltar e ixplorar a casa da rayaner</button>
         </div>
 
         <div class="passo" id="passo-7">
-            <p>No Amazonas, a busca pela cidade perdida se intensifica. Você se depara com um rio bifurcado.</p>
-            <button class="btn-proximo" data-proximo="9">Seguir pelo rio à esquerda</button>
-            <button class="btn-proximo" data-proximo="10">Seguir pelo rio à direita</button>
+            <p>No bailao da phonsyr, a busca pela ygonahh perdida se intensifica. Você se depara com uma... OH MOTHER MOTHER MOTHER WHO IS SHE</p>
+            <button class="btn-proximo" data-proximo="9">Seguir pelo rio VEYERSSS</button>
+            <button class="btn-proximo" data-proximo="10">Seguir pelo rio CAGAO</button>
         </div>
 
         <div class="passo" id="passo-8">
-            <p>De volta às igrejas, você finalmente encontra o mapa antigo. Agora, para o Amazonas!</p>
-            <button class="btn-proximo" data-proximo="7">Seguir para o Amazonas</button>
+            <p>voce arrega neh fio, aiyer você finalmente encontra o mapa antigo para a ygonahr. Agora, devolta a praia da ygonahh!</p>
+            <button class="btn-proximo" data-proximo="7">Seguir para ygonah's beach</button>
         </div>
 
         <div class="passo" id="passo-9">
             <p>O rio à esquerda leva você a uma cachoeira escondida com inscrições antigas que revelam a entrada da
-                cidade perdida.</p>
-            <button class="btn-proximo" data-proximo="11">Explorar a cidade perdida</button>
+                praiyar da eigonah</p>
+            <button class="btn-proximo" data-proximo="11">Explorar a praia da ygonah</button>
         </div>
 
         <div class="passo" id="passo-10">
-            <p>O rio à direita termina em uma área pantanosa. Apesar de belas vistas, não há sinais da cidade perdida
-                aqui.</p>
+            <p>O rio à direita termina em uma área pantanosa. Onde vc avista o ola gostaria no sigilo veyrs
+                ele parecia preigosa</p>
             <button class="btn-proximo" data-proximo="12">Retornar e tentar o outro rio</button>
         </div>
 
         <div class="passo" id="passo-11">
             <img src="img/cenario-passo11-cidade-perdida.png" alt="encontrando uma cidade maravilhosa perdida no Amazonas">
-            <p>Dentro da cidade perdida, você descobre tesouros inimagináveis e decide se dedicar a estudar e preservar
+            <p>Dentro da praia da ygonahr, você descobre varias trans inimagináveis e decide se dedicar a estudar e preservar
                 este lugar</p>
         </div>
 
         <div class="passo" id="passo-12">
             <p>Retornando e escolhendo o rio à esquerda, você finalmente encontra a cachoeira escondida e as inscrições
-                que levam à cidade perdida.</p>
+                que levam à ygonah beachs</p>
             <button class="btn-proximo" data-proximo="11">Explorar a cidade perdida</button>
         </div>
     </main>
